--- a/app/src/main/res/layout/rainbow_zone.xml
+++ b/app/src/main/res/layout/rainbow_zone.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
         android:id="@+id/image"
@@ -16,8 +18,18 @@
     <com.rainbow.drum.RainbowWheel
         android:id="@+id/wheel"
         android:layout_width="160dp"
-        android:layout_height="200dp"
+        android:layout_height="160dp"
         app:layout_constraintTop_toBottomOf="@id/image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/triangle"
+        android:rotation="180"
+        app:layout_constraintStart_toStartOf="@id/wheel"
+        app:layout_constraintEnd_toEndOf="@id/wheel"
+        app:layout_constraintTop_toTopOf="@id/wheel"
+        android:layout_marginBottom="30dp"/>
 </merge>
